exports[`AppNavButton renders a disabled component 1`] = `
<button
  disabled={true}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "#34495e",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    fill="currentColor"
    fit={true}
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
</button>
`;

exports[`AppNavButton renders an active component 1`] = `
<button
  disabled={false}
  style={
    Object {
      "background": "#34495e",
      "border": 0,
      "color": "#ecf0f1",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    fill="currentColor"
    fit={true}
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
</button>
`;

exports[`AppNavButton renders an enabled component 1`] = `
<button
  disabled={false}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "#bdc3c7",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    fill="currentColor"
    fit={true}
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
</button>
`;

exports[`AppNavButton renders an inactive component 1`] = `
<button
  disabled={false}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "#bdc3c7",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    fill="currentColor"
    fit={true}
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
</button>
`;

exports[`AppNavButton renders the component 1`] = `
<button
  disabled={false}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "#bdc3c7",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    fill="currentColor"
    fit={true}
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m14.8 20v-8.6h-5.7v5.7q0 1.2 0.8 2.1t2 0.8h2.9z m22.8 10v4.3h-25.7v-4.3l2.9-4.3h-2.9q-3.5 0-6-2.5t-2.5-6.1v-7.1l-1.5-1.4 0.7-2.9h10.8l0.7-2.8h21.4l0.7 4.2-1.4 0.8v17.8z" />
    </g>
  </svg>
</button>
`;
